<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="192dp"
    android:background="?attr/colorPrimaryDark"
    android:padding="16dp"
    android:theme="@style/ThemeOverlay.AppCompat.Dark"
    android:orientation="vertical"
    android:gravity="bottom">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:scaleType="fitStart"
        android:baselineAlignBottom="false"
        android:src="@drawable/ic_action_name"
        android:contentDescription="@string/nav_main_screen_image"/>

    <TextView
        android:id="@+id/nav_user_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/user"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>
    <TextView
        android:id="@+id/nav_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/user_email"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>

</LinearLayout>