<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.mdo3.vinylplayer.Login"
    android:background="@drawable/login_back2">

    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="46dp"
                android:backgroundTint="@android:color/background_dark"
                android:textColorHint="@android:color/background_light"
                android:visibility="visible">

                <AutoCompleteTextView
                    android:id="@+id/log_email"
                    android:layout_width="match_parent"
                    android:layout_height="31dp"
                    android:background="@drawable/background"
                    android:backgroundTint="@android:color/background_light"
                    android:completionHint="@string/label_email"
                    android:hint="@string/prompt_email"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textAlignment="textStart"
                    android:textColor="@android:color/background_dark"
                    android:textColorHint="@android:color/black"
                    android:textColorLink="@android:color/background_light"
                    android:visibility="visible"
                    tools:text="@string/label_email" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@android:color/background_dark"
                android:baselineAligned="false"
                android:textColorHint="@android:color/background_light"
                android:visibility="visible">

                <EditText
                    android:id="@+id/log_passwd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/background"
                    android:hint="@string/prompt_password"
                    android:imeActionId="6"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:padding="5dp"
                    android:paddingBottom="5dp"
                    android:paddingEnd="5dp"
                    android:singleLine="true"
                    android:textColor="@android:color/black"
                    android:textColorHint="@android:color/background_light"
                    android:textColorLink="@android:color/background_light"
                    android:visibility="visible"
                    tools:text="@string/label_password" />

            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/log_sign_up"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:backgroundTint="@android:color/holo_blue_light"
                    android:onClick="signUp"
                    android:text="@string/action_sign_up" />

                <Button
                    android:id="@+id/log_sign_in"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:backgroundTint="@android:color/holo_blue_light"
                    android:onClick="signIn"
                    android:text="@string/action_sign_in" />
            </LinearLayout>

        </LinearLayout>

    </ScrollView>
</LinearLayout>
